--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="loading-bar"></div>
         </div>
     </div>
-    <div class="bg_img">
+    <div class="bg_img" style="background-image: url(/img/poketball_BG.jpg);">
         <div id="content"></div>
         <div>
             <button id="loadMoreButton" onclick="loadMorePokemons()">Mehr Pokémon laden</button>
